# ergycjc_mipt

./: .gitignore
1sem/hometasks/module1/: task1_6.c  task5_1.cpp  task6_1.cpp
1sem/not_required/mod_4_task_2_1/: input.txt  main  main.cpp
2sem/conspects/: A-star.md  C++11_Seminar_2019_04_15.md
2sem/hometasks/module3/task_B1/: CMakeLists.txt
2sem/hometasks/module3/task_B1/headers/: ExhaustiveSolver.h  Graph.h  MST.h  Salesman.h
2sem/hometasks/module3/task_B1/src/: Graph.cpp  Salesman.cpp
2sem/hometasks/task_1/: ArcGraph.cpp  ArcGraph.h  IGraph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  SetGraph.cpp  SetGraph.h  a.out  igraph.h  main  main.cpp
2sem/hometasks/task_2/: input.txt  task_2.cpp
2sem/hometasks/task_3/: task_3.cpp
2sem/hometasks/task_A/: ArcGraph.cpp  ArcGraph.h  IGraph.h  IntHashTable.cpp  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  SetGraph.cpp  SetGraph.h  main.cpp
2sem/hometasks/task_B/: input2.txt  task_B.cpp
2sem/hometasks/task_C/: t  task_C.cpp
2sem/hometasks/task_D/: input.txt  task_D.cpp
2sem/hometasks/task_F/: task  task_F.cpp
2sem/python_contests/: conspect.md
2sem/python_contests/2/: a.py  b.py  c.py  d.py  e.py
2sem/python_contests/3/: A.py  B.py  C.py  D.py
2sem/python_contests/4/: 1.py
hometasks/module1/: task2_1.c  task3_3.c  task4_1.cpp
hometasks/module2/task2_3/: Makefile  cHeapSort.cpp  cHeapSort.h  cSection.cpp  main.cpp
hometasks/module2/task3_4/: Makefile  kStat.cpp
hometasks/module2/task4_1/: mergeSort.cpp
hometasks/module2/task5_1/: MSDSort.h  contest_file.cpp
(+101 files in other folders)
